# rhythm-game-tutorial

./: LICENSE  Monoidal Purity.txt  body-ja.html  body-ja.md  body.html  body.md  draft.md  game.hs  index.html  ja.html  params.json  rhythm-game-tutorial.cabal  tutorial-passive.hs
assets/: Monoidal Purity.txt
src/: Common.hs  game.hs  music-only.hs  tutorial-active.hs  tutorial-extended.hs  tutorial-passive.hs
