name:                rhythm-game-tutorial
version:             0.0
synopsis:            Haskell rhythm game tutorial
description:
homepage:            https://github.com/fumieval/rhythm-game-tutorial
bug-reports:         https://github.com/fumieval/rhythm-game-tutorial/issues
license:             BSD3
license-file:        LICENSE
author:              Fumiaki Kinoshita
maintainer:          Fumiaki Kinoshita <fumiexcel@gmail.com>
copyright:           Copyright (C) 2012-2013 Fumiaki Kinoshita
category:            Graphics, Monads
build-type:          Simple
stability:           experimental
cabal-version:       >=1.10

data-files:
  assets/*

source-repository head
  type: git
  location: https://github.com/fumieval/rhythm-game-tutorial.git

executable tutorial-passive
  ghc-options: -threaded -O2
  main-is: tutorial-passive.hs
  build-depends: base == 4.*, call >= 0.1.1.3 && <= 0.2, objective >= 0.6.3, lens == 4.*, mtl, containers, split
  default-language:    Haskell2010
  hs-source-dirs:      src
  other-modules: Common

executable tutorial-active
  ghc-options: -threaded -O2
  main-is: tutorial-active.hs
  build-depends: base == 4.*, call >= 0.1.1.3 && <= 0.2, objective >= 0.6.3 && <0.7, lens == 4.*, mtl, containers, split
  default-language:    Haskell2010
  other-modules: Common
  hs-source-dirs:      src
